add acts_as_taggable plugin
Signed-off-by: mindu <jmindu@gmail.com>

--- a/README
+++ b/README
@@ -4,3 +4,12 @@ Exemplo simples de upload de imagem com rails
 - Area administrativa para gerenciamento de Eventos e Imagens
 - Paginacao de imagens
 - Star rating para as imagens
+
+Gems:
+- paperclip
+
+Plugins:
+- attachament_fu
+- will_paginate
+- acts_asrateable
+- acts_as_taggable (http://svn.rubyonrails.org/rails/plugins/legacy/acts_as_taggable)
